# GooglePhish

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cloner.py  db.sqlite3  docker-compose.yml  generate_new_key.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-docker-image-to-dockerhub.yml  static_scan_repo.yml
GooglePhish/: asgi.py  settings.py  urls.py  wsgi.py
Phisher/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
Phisher/migrations/: 0001_initial.py  0002_signin_date_time.py
static/css/: reset.css  styles.css
static/js/: script.js
templates/: 400.html  base.html  google_acc_base.html  index.html  passwd.html
