[tool.poetry]
name = "googlephish"
version = "0.1.0"
description = "Google account phishing tool written in python using django"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = "^4.2"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
