[tool.poetry]
name = "googlephish"
version = "0.1.0"
description = "Google account phishing tool written in python using django"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
Django = "^4.2"
whitenoise = "^6.4.0"
gunicorn = "^22.0.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
